--- a/package.json
+++ b/package.json
@@ -1,25 +1,102 @@
-{
-  "name": "css-reset",
-  "version": "1.1.0",
-  "description": "CSS reset",
-  "main": "index.css",
-  "style": "index.css",
-  "files": [
-    "index.css"
-  ],
-  "keywords": [
-    "css",
-    "reset",
-    "browser"
-  ],
-  "license": "MIT",
-  "author": "Antoine Lehurt <code@kewah.com> (http://kewah.com/)",
-  "homepage": "https://github.com/kewah/nk-css-reset",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/kewah/nk-css-reset"
-  },
-  "bugs": {
-    "url": "https://github.com/kewah/nk-css-reset/issues"
-  }
+html {
+  box-sizing: border-box;
+  border-collapse: collapse;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+* {
+  border-collapse: inherit;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+*:not(body) {
+  background-repeat: no-repeat;
+  background-position: 50%;
+  background-size: cover;
+}
+
+[hidden] {
+  display: none !important;
+}
+
+body {
+  /* Avoid iOS font-size discrepencies */
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
+}
+
+html,
+body {
+  padding: 0;
+  margin: 0;
+}
+
+ul,
+ol,
+menu {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+li {
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+  outline: none;
+}
+
+img {
+  border: none;
+}
+
+p,
+small {
+  margin: 0;
+  padding: 0;
+}
+
+form,
+figure {
+  margin: 0;
+}
+
+fieldset {
+  border: none;
+  margin: 0;
+  padding: 0;
+}
+
+/*
+    Avoid "too bold" fonts title
+    with web fonts
+*/
+h1, h2, h3, h4, h5 {
+  font-weight: 400;
+}
+
+h1, h2, h3, h4, h5, p {
+  margin: 0;
+}
+
+hr {
+  margin: 0;
+  border: 0;
+}
+
+button {
+  outline: none;
+  border: none;
+  padding: 0;
 }
